시민참여 등록, 댓글 기능 수정 (시민참여 잔여 기능: 검색, 중복체크, 수정, 삭제, validation, UI정리)

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -591,6 +591,8 @@ background: url(/images/ko/ico.png) no-repeat 3px -637px;
 .commentView .modify {
 float: right;
 text-decoration: underline;
+margin: 3px;
+cursor: pointer;
 }
 .commentView > .con {
 max-height: 240px;
