--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1849,6 +1849,7 @@ z-index:100;
 .btn-full {
 	width: 100%;
 }
+/* Mago3D 설정창 Toolbar 관련 - 정연화 추가 */
 .inline-toggle {
 	display: inline-block;
 	width: 100%;
