시민참여 위치보기 기능 추가

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -489,6 +489,14 @@ border:none;
 text-indent: -999em;
 background: url(/images/ko/ico.png) no-repeat -462px -697px;
 }
+button.goto:hover {
+width: 32px;
+height: 32px;
+border:none;
+text-indent: -999em;
+background: url(/images/ko/ico.png) no-repeat -462px -697px;
+transform: scale(1.1);
+}
 
 /* 양쪽으로 나눠진 구분DIV - 정연화 수정 */
 .bothSide {
