--- a/ndtp-user/src/main/webapp/externlib/notification/jquery.growl.css
+++ b/ndtp-user/src/main/webapp/externlib/notification/jquery.growl.css
@@ -7,7 +7,7 @@
   position: fixed; }
 
 #growls-default {
-  bottom: 10px;
+  top: 10px;
   right: 10px; }
 #growls-tl {
   top: 10px;
@@ -51,48 +51,46 @@
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out; }
-  .growl.growl-incoming {
-    opacity: 1;
-    filter: alpha(opacity=1); }
-  .growl.growl-outgoing {
-    opacity: 1;
-    filter: alpha(opacity=1); }
-  .growl.growl-small {
-    width: 200px;
-    padding: 5px;
-    margin: 5px; }
-  .growl.growl-medium {
-    width: 250px;
-    padding: 10px;
-    margin: 10px; }
-  .growl.growl-large {
-    width: 300px;
-    padding: 15px;
-    margin: 15px; }
-  .growl.growl-default {
-    color: #FFF;
-    background: #7f8c8d; }
-  .growl.growl-error {
-    color: #FFF;
-    background: #C0392B; }
-  .growl.growl-notice {
-    position:absolute;
-    right:20px;
-    color: #FFF;
-    background: #2ECC71; }
-  .growl.growl-warning {
-    color: #FFF;
-    background: #F39C12; }
-  .growl .growl-close {
-    cursor: pointer;
-    float: right;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: normal;
-    font-family: helvetica, verdana, sans-serif; }
-  .growl .growl-title {
-    font-size: 18px;
-    line-height: 24px; }
-  .growl .growl-message {
-    font-size: 14px;
-    line-height: 18px; }
+.growl.growl-incoming {
+  opacity: 0;
+  filter: alpha(opacity=0); }
+.growl.growl-outgoing {
+  opacity: 0;
+  filter: alpha(opacity=0); }
+.growl.growl-small {
+  width: 200px;
+  padding: 5px;
+  margin: 5px; }
+.growl.growl-medium {
+  width: 250px;
+  padding: 10px;
+  margin: 10px; }
+.growl.growl-large {
+  width: 300px;
+  padding: 15px;
+  margin: 15px; }
+.growl.growl-default {
+  color: #FFF;
+  background: #7f8c8d; }
+.growl.growl-error {
+  color: #FFF;
+  background: #C0392B; }
+.growl.growl-notice {
+  color: #FFF;
+  background: #2ECC71; }
+.growl.growl-warning {
+  color: #FFF;
+  background: #F39C12; }
+.growl .growl-close {
+  cursor: pointer;
+  float: right;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: normal;
+  font-family: helvetica, verdana, sans-serif; }
+.growl .growl-title {
+  font-size: 18px;
+  line-height: 24px; }
+.growl .growl-message {
+  font-size: 14px;
+  line-height: 18px; }
