시민참여 밸리데이션 수정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -595,6 +595,7 @@ font-size: 15px;
 font-weight: bold;
 border-radius: 5px;
 background: url(/images/ko/ico.png) no-repeat 3px -637px;
+letter-spacing: -.1rem;
 }
 .commentView .modify {
 float: right;
