시민참여 관리자 수정 (잔여 기능: 댓글 목록/페이징/등록, 지도보기, 조회수 카운트)

--- a/ndtp-admin/src/main/webapp/css/ko/admin-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/admin-style.css
@@ -2567,8 +2567,17 @@ list-style:none;
 }
 /* 기존 사용하는 on 클래스에 색상이 있어서 onArea 클래스사용 */
 #layerButtonArea li.onArea {
-display:block;	
+display:block;
 }
 #layerButtonArea li {
-display:none;	
+display:none;
+}
+
+.likes-icon {
+	display: inline-block;
+	width: 20px;
+	text-indent: 999em;
+	background-image: url(/images/ko/ico.png);
+	background-repeat: no-repeat;
+    background-position: 0 -977px;
 }
