--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -58,6 +58,15 @@ margin-left: 10px;
 .user > span {
 border-bottom: 1px solid #fff;
 }
+
+.gnb li > a {
+margin-top: -5px;
+padding: 5px 10px 7px;
+color: #fff;
+border-radius: 15px;
+border: none;
+background-color: #262b3f;
+}
 .gnb li > span * {
 vertical-align: middle;
 }
