--- a/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
@@ -1,6 +1,13 @@
 @charset "utf-8";
 
 
+.name {
+	display : inline-block;
+	width: 100%;
+	height: 20px;
+	padding: 12px;
+}
+
 .labelLayer2 {
 position: absolute;
 top:60px;
