mago3d api 가이드 팝업창 및 스타일 수정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -56,7 +56,7 @@ padding-top: 5px;
 margin-left: 10px;
 }
 .user > span {
-border-bottom: 1px solid #fff;
+/* border-bottom: 1px solid #fff; */
 }
 .gnb li > span * {
 vertical-align: middle;
