--- a/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
@@ -866,8 +866,9 @@ font-size: 25px;
 }
 .popupSub > ul {
 overflow-y: auto;	
-height: 100%;
-margin: 10px 0;
+overflow-x: hidden;	
+height: calc(100% - 90px);
+/* margin: 10px 0; */
 }
 .popupSub > ul li {
 /* padding: 12px; */
@@ -876,8 +877,10 @@ cursor: pointer;
 border-bottom: 1px dotted #ccc;
 }
 .popupSub > ul li.on {
-color: #287be4;
 background-color: #fff;
+}
+.popupSub > ul li.on a {
+color: #287be4;
 }
 .popupSub > ul li:hover {
 background-color: #fff;
@@ -981,7 +984,7 @@ display: inline-block;
 margin-right: 10px;
 font-weight: bold;
 }
-.popupGroup > div ul li > input {
+.popupGroup > div  > input {
 padding: 5px;
 }
 .popupGroup table {	
@@ -999,8 +1002,9 @@ border: 1px solid #ccc;
 .name {
 	display : inline-block;
 	width: 100%;
-	height: 20px;
+	/* height: 20px; */
 	padding: 12px;
+	word-break: break-word;
 }
 
 .labelLayer2 {
@@ -1100,6 +1104,10 @@ font-weight: bold;
 padding: 5px 10px;
 }
 .paramContainer label > input {
+padding: 5px;
+margin-right: 10px;
+}
+.paramContainer  input {
 padding: 5px;
 margin-right: 10px;
 }
