--- a/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
@@ -814,7 +814,7 @@ background-color: #287be4; color: #FFFFFF;
 .onoffswitch-inner:after {
 content: "OFF";
 padding-right: 5px;
-background-color: #999999; color: ffffff;
+background-color: #999999; color: #FFFFFF;
 text-align: right;
 }
 .onoffswitch-switch {
