- 가이드페이지 웹 접근성

--- a/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
@@ -910,11 +910,19 @@ color: #fff;
 border: 1px solid #284ba4;
 background-color: #287be4;
 }
-.descript div > h4 {
+.descript div > h4  {
 margin: 10px 0;
 padding: 0 0 15px 0;
 font-size: 22px;
 font-weight: normal;
+border-bottom: 1px solid #ccc;
+}
+caption {
+margin: 10px 0;
+padding: 0 0 8px 0;
+font-size: 15px;
+font-weight: normal;
+text-align:left;
 border-bottom: 1px solid #ccc;
 }
 
