--- a/ndtp-admin/src/main/webapp/css/ko/admin-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/admin-style.css
@@ -1275,15 +1275,6 @@ dl {
 	border-color: #573592;
 	color: #fff; }
 	
-.pagination .hidden {
-display:inline-block;
-overflow:hidden;
-border:0;
-width:1px;
-height:1px;
-clip: rect(1px, 1px, 1px, 1px);
-clip-path:inset(50%);
-}
 .pagination .prev {
 	margin-right: 10px; }
 
@@ -2672,4 +2663,14 @@ background-color: #fff;
 }
 .commentWrite * {
 	vertical-align: middle;
+}
+
+.hiddenTag {
+overflow: hidden;
+border: 0;
+position: absolute;
+width: 1px;
+height: 1px;
+clip: rect(1px, 1px, 1px, 1px);
+clip-path: inset(50%);
 }
