- 가이드 페이지 input 정렬

--- a/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/apihelp-style.css
@@ -1112,6 +1112,7 @@ margin-left: 10px;
 display: inline-block;
 font-weight: bold;
 padding: 5px 10px;
+width: 160px;
 }
 .paramContainer label > input {
 padding: 5px;
