--- a/ndtp-admin/src/main/webapp/css/ko/apihelp-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/apihelp-style.css
@@ -1079,7 +1079,7 @@ margin-left: 10px;
 	
 	float: left;
 	height:908px;
-  width: 22%;
+ 	width: 22%;
 	background-color: red;
 }
 
@@ -1112,6 +1112,7 @@ margin-left: 10px;
 display: inline-block;
 font-weight: bold;
 padding: 5px 10px;
+width: 160px;
 }
 .paramContainer label > input {
 padding: 5px;
