--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -2224,7 +2224,6 @@ margin-right: 5px;
 color: #999;
 }
 
-
 span.infoTag {
 padding: 2px 6px;
 font-size: 11px;
@@ -2232,6 +2231,7 @@ border: 1px solid #c7e0f2;
 background-color: #fff;
 margin-bottom: 3px;
 display: inline-block;
+max-width: 120px;
 }
 span.infoTag > span {
 display: inline-block;
