브라우저 화면 축소 시, 지도 영역에 스크롤 생기는 버그 수정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -14,13 +14,13 @@ button { cursor:pointer; font-family:'Malgun Gothic','돋움'; }
 /* ////////// LAYOUT ////////// */
 header {
 display: flex;
-min-width: 1420px;
+/* min-width: 1420px; */
 height: 50px;
 background-color: #287be4;
 }
 #wrap {
 position: relative;
-min-width: 1420px;
+/* min-width: 1420px; */
 height: calc(100% - 50px);
 }
 .map {
