변환 페이지 탭 마우스 오버 시 색상 변경

--- a/ndtp-user/src/main/webapp/css/ko/style.css
+++ b/ndtp-user/src/main/webapp/css/ko/style.css
@@ -2590,6 +2590,9 @@ width: 100%;
 height: 100%;
 padding: 5px 0px;
 }
+.tab li > a:hover {
+color: #fff;
+}
 .tab li:not(.on) > a:hover {
 color: #006bd2;
 }
