데이터 변환 탭 테이블 컬럼 간격 설정 및 화면 사이즈 축소 시 스크롤 생성

--- a/ndtp-user/src/main/webapp/css/ko/style.css
+++ b/ndtp-user/src/main/webapp/css/ko/style.css
@@ -1306,6 +1306,9 @@ html, body {
   min-width: 1420px; }
 	
 /* header */
+header {
+min-width: 1420px;
+}
 .site-header {
 	padding-top: 13px; }
 	
@@ -1319,6 +1322,10 @@ html, body {
 	padding: 24px 0 0 0; }
 	
 /* body */
+#wrap {
+min-width: 1420px;
+min-height: 700px;
+}
 .site-body {
 	padding: 14px 0 21px 0; }
 
