--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -764,17 +764,18 @@ padding: 0;
 font-size: 14px;
 padding: 0px 7px;
 cursor: pointer;
+line-height: 22px;
 }
 .pagination li * {
-vertical-align: middle;
+line-height: 22px;
 }
 .pagination li.on {
 font-weight: bold;
 text-decoration: underline;
 }
 .pagination .ico {
-width: 20px;
-height: 20px;
+width: 24px;
+height: 24px;
 padding: 0;
 text-indent: -999em;
 }
