--- a/ndtp-admin/src/main/webapp/css/ko/admin-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/admin-style.css
@@ -2662,7 +2662,7 @@ color: #888;
 background-color: #fff;
 }
 .commentWrite * {
-	vertical-align: middle;
+vertical-align: middle;
 }
 
 .hiddenTag {
@@ -2676,26 +2676,68 @@ clip-path: inset(50%);
 }
 
 /* Dashboard */
+/**
 .pie-chart {
-  position: relative;
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  transition: 0.3s;
-  margin: 15px 8px;
+position: relative;
+display: inline-block;
+width: 120px;
+height: 120px;
+margin: 15px 8px;
+border-radius: 50%;
+-webkit-transition: 0.3s;
+transition: 0.3s;
 }
 .pie-chart span.center{
-  background: #fff;
-  display : block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  text-align:center;
-  line-height: 80px;
-  font-size: 15px;
-  transform: translate(-50%, -50%);
+background: #fff;
+display : block;
+position: absolute;
+top: 50%;
+left: 50%;
+width: 80px;
+height: 80px;
+border-radius: 50%;
+text-align:center;
+line-height: 80px;
+font-size: 15px;
+-webkit-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+}
+**/
+.pie-chart {
+position: relative;
+display: inline-block;
+width: 135px;
+height: 150px;
+border-radius: 50%;
+-webkit-transition: 0.3s;
+transition: 0.3s;
+}
+.pie-chart span.center{
+z-index: 100;
+display : block;
+position: absolute;
+top: 50%;
+left: 50%;
+width: 80px;
+height: 80px;
+border-radius: 50%;
+text-align:center;
+line-height: 70px;
+font-size: 14px;
+font-weight: normal;
+font-family: 'Nanum Gothic', sans-serif;
+-webkit-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+}
+.pie-chart span.title{
+z-index: 100;
+display : block;
+position: absolute;
+left: 50%;
+width: 80px;
+font-weight: normal;
+font-family: 'Nanum Gothic', sans-serif;
+-webkit-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+bottom: -20px;
 }
