--- a/ndtp-admin/src/main/webapp/css/ko/admin-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/admin-style.css
@@ -2676,33 +2676,10 @@ clip-path: inset(50%);
 }
 
 /* Dashboard */
-/**
-.pie-chart {
-position: relative;
-display: inline-block;
-width: 120px;
-height: 120px;
-margin: 15px 8px;
-border-radius: 50%;
--webkit-transition: 0.3s;
-transition: 0.3s;
+div.gaugeGraph {
+text-align: center;
+margin-top: 10px;
 }
-.pie-chart span.center{
-background: #fff;
-display : block;
-position: absolute;
-top: 50%;
-left: 50%;
-width: 80px;
-height: 80px;
-border-radius: 50%;
-text-align:center;
-line-height: 80px;
-font-size: 15px;
--webkit-transform: translate(-50%, -50%);
-transform: translate(-50%, -50%);
-}
-**/
 .pie-chart {
 position: relative;
 display: inline-block;
