사용자 레이어 메뉴 스크롤 관련 css 수정

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1506,9 +1506,11 @@ background:url(/images/ko/ico_layer.png) no-repeat 5px -248px;
 li.nodepth.on span {
 background:url(/images/ko/ico_layer.png) no-repeat 5px -198px;
 }
-
+.btnGroup {
+text-align:center;
+}
 button.textBtnSub {
-padding: 8px;
+padding: 6px;
 border-radius: 3px;
 color: #333;
 font-size: 14px;
