--- a/ndtp-admin/src/main/webapp/css/ko/admin-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/admin-style.css
@@ -2213,7 +2213,8 @@ tr:hover td {
 	margin: 0; }
 
 .ui-dialog .ui-dialog-content {
-	padding: 0; }
+	padding: 0;
+	overflow-x: hidden; }
 
 .ui-dialog .button-group {
 	margin-top: 30px; }
