--- a/ndtp-admin/src/main/webapp/css/ko/admin-style.css
+++ b/ndtp-admin/src/main/webapp/css/ko/admin-style.css
@@ -2719,3 +2719,7 @@ font-family: 'Nanum Gothic', sans-serif;
 transform: translate(-50%, -50%);
 bottom: -20px;
 }
+
+.block-element-wrapper > * {
+display : block;
+}
