--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1608,11 +1608,10 @@ padding: 7px;
 color: #fff;
 border-radius: 5px;
 background-color: #444a61;
-}
-.layerDivTit > span {
-color: #fff;
 font-size: 16px;
 font-weight: bold;
+overflow:hidden;
+text-overflow: ellipsis;
 }
 .layerDiv label {
 display: inline-block;
