--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -527,6 +527,7 @@ text-align: left;
 .tableList > table tr td.center {
 text-align: center;
 }
+
 button.goto {
 width: 30px;
 height: 30px;
@@ -2269,4 +2270,10 @@ text-align:center;
 .totalCount {
 color: #287BE4;
 font-style: normal;
+}
+span.link {
+cursor: pointer;
+text-decoration: underline;
+font-size: 14px;
+font-weight: bold;
 }
