'#106' mago3D 툴바 UI 깨짐

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1625,8 +1625,7 @@ border-radius: 5px;
 background-color: #444a61;
 font-size: 16px;
 font-weight: bold;
-overflow:hidden;
-text-overflow: ellipsis;
+word-wrap: break-word;
 }
 .layerDiv label {
 display: inline-block;
